esp-sdspi/build/log/idf_py_stderr_output_203106
/home/unstable/Documents/esp-idf/examples/storage/sd_card/sdspi/main/fpga_filesys.c: In function 'read_page_op':
/home/unstable/Documents/esp-idf/examples/storage/sd_card/sdspi/main/fpga_filesys.c:207:89: error: suggest parentheses around '+' in operand of '&' [-Werror=parentheses]
  207 |     response_reg = (1ULL << 27) & command_finished + (err_reg << 24) + (checksum << 16) + data;
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
/home/unstable/Documents/esp-idf/examples/storage/sd_card/sdspi/main/fpga_filesys.c: In function 'write_page_op':
/home/unstable/Documents/esp-idf/examples/storage/sd_card/sdspi/main/fpga_filesys.c:227:52: error: suggest parentheses around '+' in operand of '&' [-Werror=parentheses]
  227 |     response_reg = (1ULL << 27) & command_finished + (err_reg << 24);
      |                                   ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:107: esp-idf/main/CMakeFiles/__idf_main.dir/fpga_filesys.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5043: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
